# SheildMind-Web

./: CNAME  Cargo.toml  README.md  contact.html  discordprotection.html  gelistiriciler.html  index-2.html  index.html  nasil-yuklenir.html  neuroshield.html  shieldmind-login.html  sikcasorulansorular.html  startfree.html  subscribe.html  web.html  webservice.html
.github/workflows/: build.yml  windows-build.yml
downloads/: MHealth-V1.0.dmg  neuroshieldmac.py
downloads/NeuroShield_Linux/: neuroshield.py
src/: main.rs
