[package]
name = "neuroshield"
version = "0.1.0"
edition = "2021"

[dependencies]

[package.metadata.bundle]
name = "NeuroShield"
identifier = "com.neuroshield.app"
icon = ["assets/icon.icns"]
resources = ["assets/"]
version = "0.1.0"
short_description = "Gelişmiş Ağ Güvenlik Aracı"
long_description = "NeuroShield, çok platformlu bir gelişmiş güvenlik duvarı uygulamasıdır."

[bundle.macos]
frameworks = []


